--- a/templates/interpretability_dashboard.html
+++ b/templates/interpretability_dashboard.html
@@ -10,8 +10,8 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <link href="{{ url_for('static', filename='style.css') }}" rel="stylesheet">
     
-    <!-- Plotly.js for interactive visualizations -->
-    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+    <!-- Plotly.js for interactive visualizations (pinned version) -->
+    <script src="https://cdn.plot.ly/plotly-2.29.1.min.js"></script>
     
     <style>
         .interpretability-card {
